<resources>
    <string name="app_name">Nexretail</string>
    <string name="there_is_an_error_occurred">there_is_an_error_occurred</string>
    <string name="email">Email</string>
    <string name="no_data_available">No Data Available</string>
    <string name="connection_time_out">connection_time_out</string>
    <string name="ok">Ok</string>
    <string name="cannot_connect">There is a connection issue</string>
    <string name="message_no_internet">There is no internet</string>
    <string name="admin">Admin</string>
    <string name="book_now">Book Now</string>
    <string name="serve_now">Serve Now</string>
    <string name="promotion">Promotion</string>
    <string name="order_history">Order History</string>
    <string name="settings">Setting</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation_message">Are you sure you want to leave?</string>
    <string name="cancel">Cancel</string>
    <string name="booking">Booking</string>
    <string name="serve">Serve</string>
    <string name="room">Room</string>
    <string name="kitchen">Kitchen</string>
    <string name="report">Report</string>
    <string name="open_bill">Open Bill</string>
    <string name="booked">Booked</string>
    <string name="check_in">Checkin</string>
    <string name="serving">Serving</string>
    <string name="served">Served</string>
    <string name="billed">Billed</string>
    <string name="order_number">Order Number</string>
    <string name="customer">Customer</string>
    <string name="phone">Phone</string>
    <string name="order_date">Order Date</string>
    <string name="check_out">Check Out</string>
    <string name="checkin">Check In</string>
    <string name="order_item">Order Item</string>
</resources>