<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_drawer"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end"
    android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:background="@color/green"
                android:layout_height="?attr/actionBarSize">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_marginStart="10dp"
                        android:layout_centerVertical="true"
                        android:id="@+id/btn_menu"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_menu"/>

                    <TextView
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:text=""/>

                    <ImageView
                        android:id="@+id/btn_notification"
                        android:layout_marginEnd="10dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_notifications"/>
                </RelativeLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:id="@+id/layout_menu"
                android:layout_below="@+id/appbar"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/bg_color"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/layout_book_serve"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cd_booking"
                        android:layout_weight="1"
                        android:layout_marginEnd="5dp"
                        app:cardElevation="5dp"
                        android:focusable="true"
                        android:clickable="true"
                        android:elevation="8dp"
                        app:cardCornerRadius="10dp"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="0.0px"
                        android:clipToPadding="false"
                        android:clipChildren="false"
                        android:layout_width="match_parent"
                        android:layout_height="150dp">

                        <RelativeLayout
                            android:padding="10dp"
                            android:layout_width="match_parent"
                            android:background="@color/card_green"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_notifications"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_height="wrap_content"
                                android:text="5"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_height="wrap_content"
                                android:text="@string/booking"/>


                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView

                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        app:cardElevation="5dp"
                        android:focusable="true"
                        android:clickable="true"
                        android:elevation="8dp"
                        app:cardCornerRadius="10dp"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="0.0px"
                        android:clipToPadding="false"
                        android:clipChildren="false"
                        android:layout_width="match_parent"
                        android:layout_height="150dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:padding="10dp"
                            android:background="@color/card_green"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_notifications"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_height="wrap_content"
                                android:text="5"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_height="wrap_content"
                                android:text="@string/serve"/>


                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_room_kitchen"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:layout_weight="1"
                        android:layout_marginEnd="5dp"
                        app:cardElevation="5dp"
                        android:focusable="true"
                        android:clickable="true"
                        android:elevation="8dp"
                        app:cardCornerRadius="10dp"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="0.0px"
                        android:clipToPadding="false"
                        android:clipChildren="false"
                        android:layout_width="match_parent"
                        android:layout_height="150dp">

                        <RelativeLayout
                            android:padding="10dp"
                            android:layout_width="match_parent"
                            android:background="@color/card_green"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_notifications"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_height="wrap_content"
                                android:text="5"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_height="wrap_content"
                                android:text="@string/room"/>


                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        app:cardElevation="5dp"
                        android:focusable="true"
                        android:clickable="true"
                        android:elevation="8dp"
                        app:cardCornerRadius="10dp"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="0.0px"
                        android:clipToPadding="false"
                        android:clipChildren="false"
                        android:layout_width="match_parent"
                        android:layout_height="150dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:padding="10dp"
                            android:background="@color/card_green"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_notifications"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_height="wrap_content"
                                android:text="5"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_height="wrap_content"
                                android:text="@string/kitchen"/>


                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_report_openbill"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:layout_weight="1"
                        android:layout_marginEnd="5dp"
                        app:cardElevation="5dp"
                        android:focusable="true"
                        android:clickable="true"
                        android:elevation="8dp"
                        app:cardCornerRadius="10dp"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="0.0px"
                        android:clipToPadding="false"
                        android:clipChildren="false"
                        android:layout_width="match_parent"
                        android:layout_height="150dp">

                        <RelativeLayout
                            android:padding="10dp"
                            android:layout_width="match_parent"
                            android:background="@color/card_green"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_notifications"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_height="wrap_content"
                                android:text="5"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_height="wrap_content"
                                android:text="@string/report"/>


                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        app:cardElevation="5dp"
                        android:focusable="true"
                        android:clickable="true"
                        android:elevation="8dp"
                        app:cardCornerRadius="10dp"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="0.0px"
                        android:clipToPadding="false"
                        android:clipChildren="false"
                        android:layout_width="match_parent"
                        android:layout_height="150dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:padding="10dp"
                            android:background="@color/card_green"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_notifications"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_height="wrap_content"
                                android:text="5"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_height="wrap_content"
                                android:text="@string/open_bill"/>


                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <TextView
                    android:layout_marginStart="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Recent Activities"/>

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcy_recent_activity"
                android:layout_below="@+id/layout_menu"
                android:layout_width="match_parent"
                tools:listitem="@layout/list_recent_activity"
                android:layout_height="wrap_content"/>


        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start">

            <com.nexvis.nexretail.custom.DrawerView
                android:id="@+id/drawer_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>

